# expense-api

./: .env  Cargo.toml
src/: jwt.rs  main.rs
src/app_state/: app_state.rs
src/db/: db.rs
src/models/: category_model.rs  expense_model.rs  income_model.rs  mod.rs  user_model.rs
src/repository/: category.rs  category_repo.rs  expense_repo.rs  income_repo.rs  mod.rs  user_repo.rs
src/service/: user_service.rs
src/utils/: mod.rs
src/utils/traits/: user.rs
src/views/: mod.rs
src/views/auth/: login.rs  mod.rs  register.rs
src/views/category/: create_category.rs  get_categories.rs  get_category.rs  mod.rs  remove_category.rs  update_category.rs
src/views/expenses/: create_expense.rs  mod.rs  remove_expense.rs  update_exnsense.rs
src/views/income/: create_income.rs  get_income.rs  get_incomes.rs  mod.rs  remove_income.rs  update_income.rs
