[package]
name = "expense-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = "1.0.136"
dotenv = "0.15.0"
futures = "0.3"
env_logger="0.9.0"
actix-cors="0.6.1"
email_address="0.2.4"
bcrypt="0.13.0"
jsonwebtoken="8.1.0"
chrono={version = "0.4.19", features=["serde"]}
async-trait = "0.1.74"

[dependencies.mongodb]
version = "2.7.0"
default-features = false
features = ["async-std-runtime"]
